--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource-variable/urbanist": "^5.2.6",
     "@tailwindcss/vite": "^4.1.11",
+    "aos": "^2.3.4",
     "daisyui": "^5.0.43",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-fast-marquee": "^1.6.5",
+    "react-icons": "^5.5.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.6.3",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
